Update Barcode Scan navigation item text

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         <div onclick="openSecureLink()" class="nav-item"><i>⚙️</i> Adatgeneráló</div>
         <div onclick="loadModule('7.html')" class="nav-item"><i>📈</i> Hiba Analízis</div>
         <div onclick="openStaffPro()" class="nav-item"><i>👥</i> Szabadságok 2026</div>
-        <div onclick="loadModule('9.html')" class="nav-item"><i>📷</i> Barcode Scan</div>
+        <div onclick="loadModule('9.html')" class="nav-item"><i>📷</i> Operatori Barcode Scan </div>
     </nav>
 
     <footer>Szoftverfejlesztő:<br><strong style="color:white">GERGŐ ROLAND</strong><br>2026</footer>
