Remove version number from header title

--- a/9.html
+++ b/9.html
@@ -180,7 +180,7 @@ input[type=text] {
 <body>
 
 <div class="header">
-    <h1>Forvia Cikkszám Scan Mobil Ver4.7</h1>
+    <h1>Forvia Cikkszám Scan </h1>
     <div class="credits">Készítette: <span>Gergő Roland</span></div>
 </div>
 
