--- a/index.html
+++ b/index.html
@@ -204,9 +204,9 @@
         <div onclick="loadModule('4.html')" class="nav-item"><i>📝</i> Napi Jelentés segédlet</div>
         <div onclick="loadModule('5.html')" class="nav-item"><i>🎭</i> Maszk kereső</div>
         <div onclick="openSecureLink()" class="nav-item"><i>⚙️</i> Adatgeneráló</div>
-        <div onclick="loadModule('7.html')" class="nav-item"><i>📈</i> Hiba Analízis</div>
+        <div onclick="loadModule('7.html')" class="nav-item"><i>📊</i> Hiba Analízis</div>
         <div onclick="openStaffPro()" class="nav-item"><i>👥</i> Szabadságok 2026</div>
-        <div onclick="loadModule('9.html')" class="nav-item"><i>📷</i> Operatori Barcode Scan </div>
+        <div onclick="loadModule('9.html')" class="nav-item"><i>📷</i> Operátori Barcode Scan </div>
     </nav>
 
     <footer>Szoftverfejlesztő:<br><strong style="color:white">GERGŐ ROLAND</strong><br>2026</footer>
