--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 </aside>
 
 <div class="refresh-fab" onclick="window.location.reload()">
-    <span>🔄</span>
+    <span>↻</span>
 </div>
 
 <div class="menu-fab" id="menuFab" onclick="toggleMenu()">
