--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     <div class="sidebar-header">
         <h2>
             <span style="color: white;">FORVIA</span>
-            <span style="color: var(--accent);">HUB</span>
+            <span style="color: var(--accent);">SMT</span>
         </h2>
     </div>
 
