--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         </p>
 
         <div class="device-info">
-            Ez a verzió laptop és telefon kijelzőre lett optimalizálva.Folyamatos fejlesztés alatt áll!
+            Ez a verzió laptop és telefon kijelzőre lett optimalizálva.2026
             <span class="good-luck">Jó munkát!</span>
         </div>
     </div>
