--- a/9.html
+++ b/9.html
@@ -3,112 +3,120 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-<title>Forvia Bank Scan Pro V5.1</title>
+<title>Forvia Bank Scan Pro V5.2</title>
 <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
 
 <style>
-/* --- GLOBÁLIS DESIGN --- */
+/* --- GLOBÁLIS BEÁLLÍTÁSOK (VISSZAÁLLÍTVA) --- */
 * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
+
 :root {
-    --bg: #0f172a;
-    --card-bg: #1e293b;
+    --bg-gradient: linear-gradient(135deg, #0f172a 0%, #1e293b 100%);
     --accent: #3b82f6;
+    --glass: rgba(255, 255, 255, 0.05);
+    --glass-border: rgba(255, 255, 255, 0.1);
     --text-main: #f8fafc;
     --text-muted: #94a3b8;
-    --border: rgba(255,255,255,0.1);
-    --ok: #10b981;
-    --err: #ef4444;
+    --ok-color: #10b981;
+    --err-color: #ef4444;
 }
 
 body {
-    font-family: 'Inter', -apple-system, sans-serif;
-    background: var(--bg); color: var(--text-main);
+    font-family: -apple-system, system-ui, sans-serif;
+    background: var(--bg-gradient); color: var(--text-main);
     margin: 0; padding: 0; height: 100dvh; display: flex; flex-direction: column; overflow: hidden;
 }
 
+/* --- FEJLÉC VISSZAÁLLÍTVA --- */
 .header {
-    flex-shrink: 0; background: rgba(15, 23, 42, 0.9); backdrop-filter: blur(10px);
-    border-bottom: 1px solid var(--border); padding: 15px; text-align: center;
-    padding-top: max(15px, env(safe-area-inset-top));
+    flex-shrink: 0; width: 100%; background: rgba(15, 23, 42, 0.95);
+    backdrop-filter: blur(10px); border-bottom: 1px solid var(--glass-border);
+    padding: 15px 20px; text-align: center; z-index: 100;
+    padding-top: max(15px, env(safe-area-inset-top)); 
 }
-.header h1 { margin: 0; font-size: 1rem; text-transform: uppercase; letter-spacing: 2px; }
+.header h1 { margin: 0; font-size: 1.1rem; font-weight: 700; text-transform: uppercase; color: white; }
+.header .credits { font-size: 0.75rem; color: var(--text-muted); margin-top: 4px; }
+.header .credits span { color: var(--accent); }
 
 .main-content {
-    flex: 1; display: flex; flex-direction: column; padding: 15px;
+    flex: 1; display: flex; flex-direction: column; padding: 20px;
     overflow-y: auto; align-items: center; width: 100%;
 }
 
 #reader {
-    width: 100%; max-width: 280px; aspect-ratio: 1/1; border-radius: 24px;
-    overflow: hidden; margin-bottom: 15px; border: 2px solid var(--accent);
-    display: none; background: #000;
+    width: 100%; max-width: 300px; aspect-ratio: 1 / 1; border-radius: 20px;
+    overflow: hidden; margin-bottom: 20px; border: 3px solid var(--accent); display: none;
 }
 
-.input-area {
-    width: 100%; max-width: 500px; display: flex; gap: 10px; margin-bottom: 20px;
-}
+/* --- INPUT MEZŐK VISSZAÁLLÍTVA (V4.7) --- */
+.input-wrapper { width: 100%; max-width: 500px; display: flex; gap: 12px; margin-bottom: 25px; }
 input[type=text] {
-    flex: 1; background: var(--card-bg); border: 1px solid var(--border);
-    padding: 15px; border-radius: 12px; color: #fff; font-size: 1.1rem; outline: none;
+    flex: 1; background: var(--glass); border: 1px solid var(--glass-border);
+    padding: 16px 20px; border-radius: 16px; color: white; font-size: 1.2rem;
+    font-weight: 600; text-align: center; outline: none;
 }
 .scan-btn {
-    width: 55px; height: 55px; border-radius: 12px; border: none;
-    background: var(--accent); display: flex; align-items: center; justify-content: center;
+    width: 60px; height: 60px; border-radius: 16px; border: none;
+    background: var(--accent); color: white; display: flex; align-items: center; justify-content: center;
 }
+.scan-btn.active { background: var(--err-color); }
 
-/* --- PRO EREDMÉNY PANEL --- */
+/* --- PRO EREDMÉNY PANEL (RÁCCSAL) --- */
+#resultsWrapper { width: 100%; max-width: 500px; padding-bottom: 20px; }
 .result-card {
-    width: 100%; max-width: 500px; background: var(--card-bg);
-    border-radius: 20px; border: 1px solid var(--border);
-    overflow: hidden; animation: slideUp 0.3s ease;
+    background: #1e293b; border-radius: 20px; border: 1px solid var(--glass-border);
+    overflow: hidden; animation: popIn 0.3s ease-out; box-shadow: 0 10px 30px rgba(0,0,0,0.5);
 }
-@keyframes slideUp { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
+@keyframes popIn { from { opacity: 0; transform: scale(0.9); } to { opacity: 1; transform: scale(1); } }
 
-.res-grid {
-    display: grid; grid-template-columns: 1fr 1fr; gap: 1px; background: var(--border);
-}
-.res-item {
-    background: var(--card-bg); padding: 20px 15px; text-align: center; display: flex; flex-direction: column; justify-content: center;
-}
-.res-full { grid-column: span 2; border-bottom: 1px solid var(--border); }
-
-.label { font-size: 0.7rem; color: var(--text-muted); text-transform: uppercase; letter-spacing: 1px; margin-bottom: 5px; }
-.value { font-size: 1.4rem; font-weight: 700; color: #fff; }
-.highlight { color: #fbbf24; } /* Pozíció színe */
+.res-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 1px; background: var(--glass-border); }
+.res-item { background: #1e293b; padding: 15px; text-align: center; }
+.res-full { grid-column: span 2; border-bottom: 1px solid var(--glass-border); }
+.res-label { font-size: 0.65rem; color: var(--text-muted); text-transform: uppercase; margin-bottom: 4px; }
+.res-value { font-size: 1.3rem; font-weight: 800; color: white; word-break: break-all; }
+.res-value.highlight { color: #fbbf24; }
 
 /* --- ELŐZMÉNYEK --- */
 .footer-history {
-    background: #0b1120; border-top: 1px solid var(--border); height: 180px;
-    padding: 15px; overflow-y: auto;
+    background: rgba(15, 23, 42, 0.95); border-top: 1px solid var(--glass-border);
+    height: 150px; flex-shrink: 0; overflow-y: auto; padding: 15px;
 }
-.hist-head { display: flex; justify-content: space-between; font-size: 0.7rem; font-weight: bold; color: var(--text-muted); text-transform: uppercase; margin-bottom: 10px; }
-.h-row {
-    display: flex; justify-content: space-between; padding: 10px; background: rgba(255,255,255,0.03);
-    border-radius: 8px; margin-bottom: 5px; font-size: 0.85rem; border-left: 3px solid var(--accent);
+.history-title { 
+    display: flex; justify-content: space-between; align-items: center;
+    font-size: 0.75rem; color: var(--text-muted); text-transform: uppercase; margin-bottom: 10px; font-weight: bold; 
 }
-.h-row.err { border-left-color: var(--err); }
+.h-item {
+    display: flex; align-items: center; padding: 8px 12px; margin-bottom: 6px; 
+    background: rgba(255,255,255,0.03); border-radius: 10px; font-size: 0.85rem;
+}
+.h-time { color: var(--text-muted); margin-right: 15px; font-weight: bold; }
 </style>
 </head>
 <body>
 
 <div class="header">
-    <h1>Forvia Scan Pro</h1>
+    <h1>Forvia Cikkszám Scan</h1>
+    <div class="credits">Készítette: <span>Gergő Roland</span></div>
 </div>
 
 <div class="main-content">
-    <div id="loadMsg" style="font-size:0.7rem; color:var(--text-muted); margin-bottom:10px;">Adatbázis töltése...</div>
+    <div id="loadMsg" style="font-size:0.75rem; color:var(--text-muted); margin-bottom:15px;">Adatbázis betöltése...</div>
     <div id="reader"></div>
-    <div class="input-area">
-        <input type="text" id="barcodeInput" placeholder="Vonalkód olvasás..." autocomplete="off">
+    <div class="input-wrapper">
+        <input type="text" id="barcodeInput" placeholder="Scan Barcode" autocomplete="off">
         <button class="scan-btn" onclick="handleCameraButton()">
-            <svg id="camIcon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"/><circle cx="12" cy="13" r="4"/></svg>
+            <svg id="camIcon" viewBox="0 0 24 24" width="28" fill="white"><path d="M4 6h2v12H4zm14 0h2v12h-2zm-4 0h2v12h-2zm-4 0h2v12h-2zM2 4v16h20V4H2zm18 14H4V6h16v12z"/></svg>
+            <svg id="stopIcon" viewBox="0 0 24 24" width="28" fill="white" style="display:none;"><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/></svg>
         </button>
     </div>
     <div id="resultsWrapper"></div>
 </div>
 
 <div class="footer-history">
-    <div class="hist-head"><span>Előzmények</span><span onclick="clearHistory()" style="color:var(--err); cursor:pointer;">Törlés</span></div>
+    <div class="history-title">
+        <span>Előzmények</span>
+        <span onclick="clearHistory()" style="cursor:pointer; color:var(--accent);">Törlés</span>
+    </div>
     <div id="historyList"></div>
 </div>
 
@@ -120,6 +128,11 @@ const input = document.getElementById('barcodeInput');
 const resultsWrapper = document.getElementById('resultsWrapper');
 const historyList = document.getElementById('historyList');
 const loadMsg = document.getElementById('loadMsg');
+const camIcon = document.getElementById('camIcon');
+const stopIcon = document.getElementById('stopIcon');
+const scanBtn = document.querySelector('.scan-btn');
+const readerDiv = document.getElementById('reader');
+
 let html5QrCode = null, isCameraRunning = false, bankDB = [];
 
 async function init() {
@@ -146,7 +159,7 @@ async function loadBankCSV() {
                 model: (modelIdx !== -1 && cols[modelIdx]) ? cols[modelIdx].trim() : "BANK"
             });
         });
-        loadMsg.innerText = `ADATBÁZIS: ${bankDB.length} TÉTEL`;
+        loadMsg.innerText = `ADATBÁZIS KÉSZ: ${bankDB.length} TÉTEL`;
     } catch (e) { loadMsg.innerText = "HIBA: bank.csv!"; }
 }
 
@@ -169,64 +182,81 @@ function search(code) {
             card.className = 'result-card';
             card.innerHTML = `
                 <div class="res-grid">
-                    <div class="res-item res-full"><div class="label">Modell</div><div class="value">${m.model}</div></div>
-                    <div class="res-item"><div class="label">Gép</div><div class="value">${m.gep}</div></div>
-                    <div class="res-item"><div class="label">Pozíció</div><div class="value highlight">#${m.poz}</div></div>
-                    <div class="res-item"><div class="label">Azonosító (ID)</div><div class="value" style="font-size:1rem; word-break:break-all;">${m.id}</div></div>
-                    <div class="res-item"><div class="label">MSD</div><div class="value" style="color:#10b981;">${m.msd}</div></div>
+                    <div class="res-item res-full"><div class="res-label">Modelnév</div><div class="res-value">${m.model}</div></div>
+                    <div class="res-item"><div class="res-label">Gép azonosító</div><div class="res-value">${m.gep}</div></div>
+                    <div class="res-item"><div class="res-label">Pozíció</div><div class="res-value highlight">#${m.poz}</div></div>
+                    <div class="res-item"><div class="res-label">ID</div><div class="res-value" style="font-size:0.9rem;">${m.id}</div></div>
+                    <div class="res-item"><div class="res-label">MSD</div><div class="res-value" style="color:#10b981;">${m.msd}</div></div>
                 </div>
             `;
             resultsWrapper.appendChild(card);
-            saveToHistory(code, m.gep, true);
         });
+        saveToHistory(code);
     } else {
         playSound(false);
-        resultsWrapper.innerHTML = '<div style="color:var(--err); font-weight:bold; text-align:center; padding:20px;">NINCS A LISTÁBAN</div>';
-        saveToHistory(code, "Hiba", false);
+        resultsWrapper.innerHTML = '<div style="color:var(--err-color); font-weight:bold; margin-top:20px;">NINCS A LISTÁBAN</div>';
     }
 }
 
-function saveToHistory(code, res, ok) {
+function saveToHistory(code) {
     const time = new Date().toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'});
     const history = JSON.parse(localStorage.getItem('scanHistory') || '[]');
-    history.unshift({ code, res, ok, time });
-    if(history.length > 50) history.pop();
-    localStorage.setItem('scanHistory', JSON.stringify(history));
-    renderHistory();
+    // Csak egyszer mentjük el a kódot a listába
+    if (!history.some(h => h.code === code)) {
+        history.unshift({ code, time });
+        if(history.length > 30) history.pop();
+        localStorage.setItem('scanHistory', JSON.stringify(history));
+        renderHistory();
+    }
 }
 
 function renderHistory() {
     const history = JSON.parse(localStorage.getItem('scanHistory') || '[]');
     historyList.innerHTML = history.map(item => `
-        <div class="h-row ${item.ok ? '' : 'err'}">
-            <span style="color:var(--text-muted); margin-right:10px;">${item.time}</span>
-            <span style="flex:1;">${item.code}</span>
-            <span style="font-weight:bold;">${item.res}</span>
+        <div class="h-item">
+            <span class="h-time">${item.time}</span>
+            <span><b>${item.code}</b></span>
         </div>
     `).join('');
 }
 
 function clearHistory() {
-    if(confirm("Törlöd az előzményeket?")) {
-        localStorage.removeItem('scanHistory');
-        renderHistory();
-    }
+    localStorage.removeItem('scanHistory');
+    renderHistory();
 }
 
 function handleCameraButton() {
-    const reader = document.getElementById('reader');
-    if (isCameraRunning) {
-        html5QrCode.stop().then(() => { reader.style.display='none'; isCameraRunning=false; });
-    } else {
-        reader.style.display='block';
-        if(!html5QrCode) html5QrCode = new Html5Qrcode("reader");
-        html5QrCode.start({ facingMode: "environment" }, { fps: 20, qrbox: 220 }, (txt) => {
+    if (isCameraRunning) forceStopCamera();
+    else startCamera();
+}
+
+function startCamera() {
+    readerDiv.style.display = 'block';
+    camIcon.style.display = 'none';
+    stopIcon.style.display = 'block';
+    scanBtn.classList.add('active');
+    if (!html5QrCode) html5QrCode = new Html5Qrcode("reader");
+    html5QrCode.start({ facingMode: "environment" }, { fps: 20, qrbox: 200 }, (txt) => {
+        forceStopCamera().then(() => {
+            input.value = txt; search(txt.toUpperCase());
+        });
+    }).then(() => isCameraRunning = true);
+}
+
+function forceStopCamera() {
+    return new Promise(resolve => {
+        if (html5QrCode) {
             html5QrCode.stop().then(() => {
-                reader.style.display='none'; isCameraRunning=false;
-                input.value = txt; search(txt.toUpperCase());
-            });
-        }).then(() => isCameraRunning = true);
-    }
+                cleanupUI(); resolve();
+            }).catch(() => { cleanupUI(); resolve(); });
+        } else { cleanupUI(); resolve(); }
+    });
+}
+
+function cleanupUI() {
+    html5QrCode = null; isCameraRunning = false;
+    readerDiv.style.display = 'none'; camIcon.style.display = 'block';
+    stopIcon.style.display = 'none'; scanBtn.classList.remove('active');
 }
 
 function playSound(ok) {
