--- a/9.html
+++ b/9.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-<title>Forvia Bank Scan Mobil Ver5.4</title>
+<title>Forvia Bank Scan Mobil Ver5.5</title>
 <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
 
 <style>
@@ -67,7 +67,7 @@ input[type=text] {
 .scan-btn svg { width: 28px; height: 28px; fill: white; }
 .scan-btn.active { background: var(--err-color); }
 
-/* --- EREDMÉNYEK (ÚJ GRID DESIGN) --- */
+/* --- EREDMÉNYEK (GRID DESIGN) --- */
 #resultsWrapper { width: 100%; max-width: 500px; padding-bottom: 20px; }
 
 .result-card {
@@ -77,7 +77,6 @@ input[type=text] {
 }
 @keyframes popIn { from { opacity: 0; transform: scale(0.9); } to { opacity: 1; transform: scale(1); } }
 
-/* Rácsos elrendezés */
 .res-grid {
     display: grid; grid-template-columns: 1fr 1fr; gap: 1px; background: var(--glass-border);
 }
@@ -89,13 +88,13 @@ input[type=text] {
 
 .res-label { font-size: 0.65rem; color: var(--text-muted); text-transform: uppercase; margin-bottom: 5px; letter-spacing: 1px; }
 .res-value { font-size: 1.1rem; font-weight: 800; color: white; word-break: break-all; line-height: 1.2; }
-.res-highlight { color: #fbbf24; font-size: 1.4rem; } /* Pozíció kiemelése */
+.res-highlight { color: #fbbf24; font-size: 1.4rem; } 
 .res-ok { color: var(--ok-color); }
 
 .no-result { font-size: 1.5rem; font-weight: bold; color: var(--err-color); text-align: center; margin-top: 20px; }
 .load-msg { font-size: 0.8rem; color: var(--text-muted); margin-bottom: 15px; }
 
-/* --- FOOTER (MÓDOSÍTVA: BALRA TÖRLÉS, LOCALSTORAGE) --- */
+/* --- FOOTER (TÖRLÉS BALRA, ADATOK KÖZÉPEN) --- */
 .footer-history {
     background: rgba(15, 23, 42, 0.95); border-top: 1px solid var(--glass-border);
     height: 150px; flex-shrink: 0; overflow-y: auto; padding: 15px;
@@ -111,15 +110,19 @@ input[type=text] {
     padding: 2px 8px; border-radius: 4px;
 }
 
+/* --- JAVÍTOTT ELRENDEZÉS: KÖZELEBB AZ ÓRÁHOZ --- */
 .h-item {
-    display: flex; justify-content: space-between; align-items: center;
+    display: flex; 
+    align-items: center;
+    justify-content: flex-start; /* Nem space-between, hanem balra igazítva */
+    gap: 30px; /* Fix távolság az idő és a kód között */
     padding: 8px 12px; margin-bottom: 6px;
     background: rgba(255,255,255,0.03); border-radius: 8px; font-size: 0.85rem;
     border-left: 3px solid #555;
 }
 .h-ok { border-left-color: var(--ok-color); }
 .h-err { border-left-color: var(--err-color); }
-.h-time { font-size: 0.75rem; color: #64748b; font-weight: bold; }
+.h-time { font-size: 0.75rem; color: #64748b; font-weight: bold; white-space: nowrap; }
 </style>
 </head>
 <body>
