--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
     <div class="ticker-wrap">
         <div class="ticker-move">
-            <div class="ticker-item">📢 FORVIA HUB INFORMÁCIÓK: Üdvözlünk a rendszerben! A havi leltár időpontja Január 31. --- Minden rendszer megfelelően működik. --- Karbantartás jelenleg nincs tervezve.</div>
+            <div class="ticker-item">📢 INFORMÁCIÓK: Üdvözlünk a rendszerben! A legújabb frissítébe bekerült a kamerás barcode szkenner a gépkezelők számára! Engedélyezd a kamera használatot a böngésződben és nem lesz vele gond a továbbiakban! Folyamatosan fejlesztés alatt tartom az oldalt továbbra is!</div>
         </div>
     </div>
     </div>
