--- a/index.html
+++ b/index.html
@@ -85,28 +85,6 @@
 
         @keyframes fadeIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
 
-        /* --- HÍRSÁV STÍLUS --- */
-        .ticker-wrap {
-            position: fixed; bottom: 0; left: 0; width: 100%; overflow: hidden; height: 36px;
-            background-color: rgba(15, 23, 42, 0.95); border-top: 1px solid var(--accent);
-            z-index: 1000; backdrop-filter: blur(5px);
-            padding-left: 100%; box-sizing: content-box;
-        }
-        .ticker-move {
-            display: inline-block; height: 36px; line-height: 36px; white-space: nowrap;
-            padding-right: 100%; box-sizing: content-box;
-            animation: ticker 30s linear infinite; /* 30 másodperc alatt fut végig */
-        }
-        .ticker-item {
-            display: inline-block; padding: 0 2rem; font-size: 0.9rem; color: #fbbf24;
-            font-weight: 600; text-transform: uppercase; letter-spacing: 1px;
-        }
-        @keyframes ticker {
-            0% { transform: translate3d(0, 0, 0); }
-            100% { transform: translate3d(-100%, 0, 0); }
-        }
-        /* --------------------- */
-
         .sidebar {
             position: fixed; left: 0; top: 0;
             width: 280px; height: 100%; background: #111827;
@@ -198,17 +176,11 @@
         </p>
 
         <div class="device-info">
-            Ez a verzió laptop és telefon kijelzőre lett optimalizálva.
+            Ez a verzió laptop és telefon kijelzőre lett optimalizálva
             <span class="good-luck">Jó munkát!</span>
         </div>
     </div>
-
-    <div class="ticker-wrap">
-        <div class="ticker-move">
-            <div class="ticker-item">📢 INFORMÁCIÓK: Üdvözlünk a rendszerben! A legújabb frissítébe bekerült a kamerás barcode szkenner a gépkezelők számára! Engedélyezd a kamera használatot a böngésződben és nem lesz vele gond a továbbiakban! Folyamatosan fejlesztés alatt tartom az oldalt továbbra is!</div>
-        </div>
-    </div>
-    </div>
+</div>
 
 <iframe id="content-frame" name="appFrame"></iframe>
 
