--- a/8.html
+++ b/8.html
@@ -84,7 +84,7 @@
             border-bottom: 1px solid #2d3748;
         }
 
-        /* --- CÉLKERESZT JAVÍTÁS (HÉTVÉGE IS) --- */
+        /* --- CÉLKERESZT --- */
         tr.row-highlight .name-col {
             background-color: #3b82f6 !important; 
             color: white !important;
@@ -163,7 +163,7 @@
         .shift-C.active { background: #f59e0b; border-color: #fbbf24; }
         .shift-D.active { background: #8b5cf6; border-color: #a78bfa; }
 
-        /* --- PRO MŰSZAK-SPECIFIKUS MAI NAP KIEMELÉS --- */
+        /* --- PRO MŰSZAK-SPECIFIKUS MAI NAP KIEMELÉS (JAVÍTOTT: CSAK KERET) --- */
         /* Alap közös stílus a mai naphoz */
         .today-base {
             position: relative;
@@ -171,20 +171,40 @@
             font-weight: 900 !important;
         }
 
-        /* A Műszak (Piros) */
-        .today-A { border-left: 2px solid #ef4444 !important; border-right: 2px solid #ef4444 !important; background: rgba(239, 68, 68, 0.1) !important; box-shadow: inset 0 0 15px rgba(239, 68, 68, 0.1); }
+        /* A Műszak (Piros) - TISZTA HÁTTÉR */
+        .today-A { 
+            border-left: 2px solid #ef4444 !important; 
+            border-right: 2px solid #ef4444 !important; 
+            background: transparent !important; 
+            box-shadow: none !important;
+        }
         thead th.today-A { color: #ef4444 !important; border-bottom: 2px solid #ef4444 !important; background-color: #1e293b !important; }
 
-        /* B Műszak (Zöld) */
-        .today-B { border-left: 2px solid #10b981 !important; border-right: 2px solid #10b981 !important; background: rgba(16, 185, 129, 0.1) !important; box-shadow: inset 0 0 15px rgba(16, 185, 129, 0.1); }
+        /* B Műszak (Zöld) - TISZTA HÁTTÉR */
+        .today-B { 
+            border-left: 2px solid #10b981 !important; 
+            border-right: 2px solid #10b981 !important; 
+            background: transparent !important;
+            box-shadow: none !important;
+        }
         thead th.today-B { color: #10b981 !important; border-bottom: 2px solid #10b981 !important; background-color: #1e293b !important; }
 
-        /* C Műszak (Narancs) */
-        .today-C { border-left: 2px solid #f59e0b !important; border-right: 2px solid #f59e0b !important; background: rgba(245, 158, 11, 0.1) !important; box-shadow: inset 0 0 15px rgba(245, 158, 11, 0.1); }
+        /* C Műszak (Narancs) - TISZTA HÁTTÉR */
+        .today-C { 
+            border-left: 2px solid #f59e0b !important; 
+            border-right: 2px solid #f59e0b !important; 
+            background: transparent !important;
+            box-shadow: none !important;
+        }
         thead th.today-C { color: #f59e0b !important; border-bottom: 2px solid #f59e0b !important; background-color: #1e293b !important; }
 
-        /* D Műszak (Lila) */
-        .today-D { border-left: 2px solid #8b5cf6 !important; border-right: 2px solid #8b5cf6 !important; background: rgba(139, 92, 246, 0.1) !important; box-shadow: inset 0 0 15px rgba(139, 92, 246, 0.1); }
+        /* D Műszak (Lila) - TISZTA HÁTTÉR */
+        .today-D { 
+            border-left: 2px solid #8b5cf6 !important; 
+            border-right: 2px solid #8b5cf6 !important; 
+            background: transparent !important;
+            box-shadow: none !important;
+        }
         thead th.today-D { color: #8b5cf6 !important; border-bottom: 2px solid #8b5cf6 !important; background-color: #1e293b !important; }
 
         @media print {
