--- a/8.html
+++ b/8.html
@@ -70,7 +70,7 @@
             box-sizing: border-box;
         }
 
-        /* --- STICKY OSZLOPOK (JAVÍTOTT MÉRETEK ÉS POZÍCIÓK) --- */
+        /* --- STICKY OSZLOPOK (JAVÍTOTT MÉRETEK 60px-re) --- */
         
         /* 1. NÉV OSZLOP (0px - 140px) */
         .name-col { 
@@ -88,7 +88,7 @@
             box-sizing: border-box;
         }
 
-        /* 2. KERET OSZLOP (140px - 200px) - Szélesség: 60px */
+        /* 2. KERET OSZLOP (140px - 200px) - JAVÍTVA 60px-re */
         .sticky-quota {
             position: sticky !important;
             left: 140px !important; 
@@ -101,10 +101,10 @@
             box-sizing: border-box;
         }
 
-        /* 3. KIVEHETŐ OSZLOP (200px - 260px) - Szélesség: 60px */
+        /* 3. KIVEHETŐ OSZLOP (200px - 260px) - JAVÍTVA 60px-re */
         .sticky-rem {
             position: sticky !important;
-            left: 200px !important;       /* 140 + 60 = 200 */
+            left: 200px !important;       /* 140 + 60 = 200 (Pontos illeszkedés) */
             width: 60px !important;       /* MEGNÖVELVE */
             min-width: 60px !important;
             max-width: 60px !important;
@@ -115,7 +115,7 @@
             box-sizing: border-box;
         }
 
-        /* Fejlécek Z-Index javítása */
+        /* Fejlécek Z-Index */
         .matrix-table thead th.name-col,
         .matrix-table thead th.sticky-quota,
         .matrix-table thead th.sticky-rem { 
@@ -207,19 +207,19 @@
             font-weight: 900 !important;
         }
 
-        /* A Műszak (Piros) - Halvány keret (0.4) */
+        /* A Műszak (Piros) */
         .today-A { border-left: 2px solid rgba(239, 68, 68, 0.4) !important; border-right: 2px solid rgba(239, 68, 68, 0.4) !important; }
         thead th.today-A { color: #ef4444 !important; border-bottom: 2px solid rgba(239, 68, 68, 0.4) !important; background-color: #1e293b !important; }
 
-        /* B Műszak (Zöld) - Halvány keret (0.4) */
+        /* B Műszak (Zöld) */
         .today-B { border-left: 2px solid rgba(16, 185, 129, 0.4) !important; border-right: 2px solid rgba(16, 185, 129, 0.4) !important; }
         thead th.today-B { color: #10b981 !important; border-bottom: 2px solid rgba(16, 185, 129, 0.4) !important; background-color: #1e293b !important; }
 
-        /* C Műszak (Narancs) - Halvány keret (0.4) */
+        /* C Műszak (Narancs) */
         .today-C { border-left: 2px solid rgba(245, 158, 11, 0.4) !important; border-right: 2px solid rgba(245, 158, 11, 0.4) !important; }
         thead th.today-C { color: #f59e0b !important; border-bottom: 2px solid rgba(245, 158, 11, 0.4) !important; background-color: #1e293b !important; }
 
-        /* D Műszak (Lila) - Halvány keret (0.4) */
+        /* D Műszak (Lila) */
         .today-D { border-left: 2px solid rgba(139, 92, 246, 0.4) !important; border-right: 2px solid rgba(139, 92, 246, 0.4) !important; }
         thead th.today-D { color: #8b5cf6 !important; border-bottom: 2px solid rgba(139, 92, 246, 0.4) !important; background-color: #1e293b !important; }
 
@@ -509,7 +509,7 @@
             }).join('');
         }
 
-        // JAVÍTOTT GÖRGETÉS
+        // JAVÍTOTT GÖRGETÉS - MEGNÖVELT OFFSETTEL (140+60+60 = 260)
         function jumpToToday() {
             const now = new Date();
             date = new Date(2026, now.getMonth(), 1); 
